--- a/jheniferbook/style.css
+++ b/jheniferbook/style.css
@@ -1,11 +1,17 @@
 @import url("styles/header.css");
+@import url("styles/banner.css");
+@import url("styles/carrossel.css");
+@import url("styles/topicos.css");
+@import url("styles/contato.css");
+@import url("styles/rodapé.css");
 
 :root {
-    --cor-de-fundo: #EBECEE;
-    --branco: #FFFFFF;
-    --laranja: #f5efe3;
-    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    --cor-de-fundo: #d9b3e0;
+    --lilás: #f1ceff;;
+    --lilás: #f1ceff;
+    --roxo-degrade: linear-gradient(97.54deg, #a57cd3 35.49%, #c0a3e0 165.37%);
     --fonte-principal: "Poppins";
+    --roxo: #9b63db;
 }
 
 body {
